错别字订正，li排版

--- a/translation/10-代码组织.md
+++ b/translation/10-代码组织.md
@@ -32,26 +32,18 @@ Additionally, this technique has the advantage that all the variables declared i
 
 这个特性非常适合组织小块的代码，通常是设置一个类。他给了读者一个重要的线索并且减少干扰，能让读者聚焦于关键的变量和函数中。此外，这个技术有一个优点，所有的变量都在代码块中，也就是只在代码块的区域中有效，这意味着可以减少对其他作用域的命名污染。
 
-## Pragma 
+## Pragma
 
 ### Pragma Mark
 
 `#pragma mark -` is a great way to organize the code inside a class and helps you grouping methods implementation.
 We suggest to use `#pragma mark -`to separate:
- 
+
  `#pragma mark -`  是一个在类内部组织代码并且帮助你分组方法实现的好方法。 我们建议使用  `#pragma mark -` 来分离:
 
-
-- methods in functional groupings 
-- protocols implementations.
-- methods overridden from a superclass
-
-
-- 不同功能组的方法 
-- protocols 的实现
-- 对父类方法的重写
-
-
+- methods in functional groupings. 不同功能组的方法
+- protocols implementations. protocols 的实现
+- methods overridden from a superclass. 对父类方法的重写
 
 ```objective-c
 
@@ -69,11 +61,11 @@ We suggest to use `#pragma mark -`to separate:
 - (void)setCustomProperty:(id)value { /* ... */ }
 - (id)customProperty { /* ... */ }
 
-#pragma mark - IBActions  
+#pragma mark - IBActions
 
 - (IBAction)submitData:(id)sender { /* ... */ }
 
-#pragma mark - Public 
+#pragma mark - Public
 
 - (void)publicMethod { /* ... */ }
 
@@ -157,7 +149,7 @@ It's useful to be told that a variable you've defined is going unused. In most c
 
 Now you can keep your code in place without the compiler complaining about it. And yes, that pragma needs to go below the offending code.
 
-现在你的代码不用任何编译警告了。而且，这个【疑问】 
+现在你的代码不用任何编译警告了。而且，这个【疑问】
 
 ## Explicit warnings and errors 明确编译器警告和错误
 
@@ -233,13 +225,9 @@ A function must have a docstring unless it meets all of the following criteria:
 
 一个函数必须有一个字符串文档，除非它符合下面的所有条件
 
-* not externally visible
-* very short
-* obvious
-
-* 非公开
-* 很短
-* 显而易见
+* not externally visible. 非公开
+* very short. 很短
+* obvious. 显而易见
 
 
 The docstring should describe the function's calling syntax and its semantics, not its implementation.
