--- a/translation/5-类.md
+++ b/translation/5-类.md
@@ -159,7 +159,7 @@ A typical example is whether you create a `UIViewController` subclass overriding
 
 第一个方案是最简单的：你不需要增加类的任何初始化逻辑，只需要依照父类的designated initializer。
 当你希望提供额外的初始化逻辑的时候你可以重载 designated initializer。你只需要重载你的直接的超类的 designated initializer 并且确认你的实现调用了超类的方法。
-你一个典型的例子是你创造`UIViewController`自累的时候重载
+你一个典型的例子是你创造`UIViewController`子类的时候重载
 `initWithNibName:bundle:`方法。
 
 ```objective-c
@@ -366,7 +366,7 @@ This pattern is very useful because it removes the complexity of this initializa
 
 Class clusters are widely used in the Apple's frameworks; some of the most notably examples are `NSNumber` that can return an appropriate subclass depending of the type of number provided (Integer, Float, etc...) or `NSArray` that will return a concrete subclass with the best storage policy.
 
-Class clusters 在 Apple 的Framework 中广泛使用：一些明显的例子比如  `NSNumber` 可以返回不同哦给你的子类，取决于 数字类型如何提供  (Integer, Float, etc...) 或者 `NSArray` 返回不同的最优存储策略的子类。
+Class clusters 在 Apple 的Framework 中广泛使用：一些明显的例子比如  `NSNumber` 可以返回不同哦给你的子类，取决于数字类型如何提供  (Integer, Float, etc...) 或者 `NSArray` 返回不同的最优存储策略的子类。
 
 
 The beauty of this pattern is that the caller can be completely unaware of the concrete subclass; in fact it can be used when designing a library to be able to swap the underlaying returned class without leaking any implementation detail as long as is respectful of the contract established in the abstract class.
@@ -382,7 +382,7 @@ In our experience the use of a Class Cluster can be very helpful in removing a l
 A typical example of this is when you have the same UIViewController subclass for both iPhone and iPad, but the behavior is slightly different depending on the the device.
 
 
-一个经典的李姿势如果有一个一样的 UIViewController 子类，为 iPad 和 iPhone 写，但是在不同的设备上有不同的行为。
+一个经典的例子是如果有一个一样的 UIViewController 子类，为 iPad 和 iPhone 写，但是在不同的设备上有不同的行为。
 
 
 The naïve implementation is to put some conditional code checking the device in the methods where the different logic is needed, even though initially the place where this conditional logic is applied may be quite few they naturally tend to grow producing an explosion of code paths.
